--- a/config/machines/levante/catalog/ICON/ngc3028.yaml
+++ b/config/machines/levante/catalog/ICON/ngc3028.yaml
@@ -1,19 +1,57 @@
 sources:
-  ngc3028:
+  PT30M:
     args:
       chunks: null
       consolidated: true
-      urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_{{ time }}_{{ zoom }}.zarr
+      urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT30M_{{ zoom }}.zarr
     driver: zarr
     parameters:
-      time:
+      zoom:
         allowed:
-          - PT30M
-          - PT3H
-          - P1D
-        default: PT30M
-        description: time resolution of the dataset
-        type: str
+          - 10
+          - 9
+          - 8
+          - 7
+          - 6
+          - 5
+          - 4
+          - 3
+          - 2
+          - 1
+          - 0
+        default: 0
+        description: zoom resolution of the dataset
+        type: int
+  PT3H:
+    args:
+      chunks: null
+      consolidated: true
+      urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_PT3H_{{ zoom }}.zarr
+    driver: zarr
+    parameters:
+      zoom:
+        allowed:
+          - 10
+          - 9
+          - 8
+          - 7
+          - 6
+          - 5
+          - 4
+          - 3
+          - 2
+          - 1
+          - 0
+        default: 0
+        description: zoom resolution of the dataset
+        type: int
+  P1D:
+    args:
+      chunks: null
+      consolidated: true
+      urlpath: /work/bm1235/k203123/NextGEMS_Cycle3.git/experiments/ngc3028/outdata/ngc3028_P1D_{{ zoom }}.zarr
+    driver: zarr
+    parameters:
       zoom:
         allowed:
           - 10
