--- a/config/machines/levante/catalog/PSC/piomas.yaml
+++ b/config/machines/levante/catalog/PSC/piomas.yaml
@@ -13,6 +13,6 @@ sources:
         time: 1
         use_cftime: True
       xarray_kwargs:
-        decode_times: False
+        decode_times: True
       urlpath:
       - /work/bb1153/b382075/datasets/PSC/PIOMAS/raw/sivol_r1i1p1_mon_197901-202212_GCCS360x120.new.nc
