--- a/config/aqua-grids.yaml
+++ b/config/aqua-grids.yaml
@@ -167,6 +167,12 @@ grids:
       height: $grids/NEMO/eORCA12_mesh_3d_grid_T_level.nc
     space_coord: ["ncells"]
     vert_coord: ["height"]
+  nemo-healpix:
+    path:
+      2d: $grids/HealPix/icon_hpx10_oce_2d.nc 
+      level: $grids/HealPix/nemo_hpx10_oce_level.nc
+    space_coord: ["ncells"]
+    vert_coord: ["level"]
 
   # OBSERVATIONS
   aviso:
