--- a/config/machines/lumi/catalog/NEMO/coupled-spinup-1990-1991.yaml
+++ b/config/machines/lumi/catalog/NEMO/coupled-spinup-1990-1991.yaml
@@ -24,7 +24,7 @@ sources:
       fdb_path: /scratch/project_465000454/iwagner/a0ef/config.yaml
       eccodes_path: 
         /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
-      source_grid_name: tco1279
+      source_grid_name: nemo-healpix
       variables: [263101, 263001, 263122, 263121, 263100]
 
   monthly-1deg-3d:
@@ -60,5 +60,5 @@ sources:
       fdb_path: /scratch/project_465000454/iwagner/a0ef/config.yaml
       eccodes_path: 
         /project/project_465000454/models/ifs-nemo/DE_CY48R1.0_climateDT_develop/source/eccodes/definitions
-      source_grid_name: tco1279
+      source_grid_name: nemo-healpix
       variables: [263500, 263501, 263505, 263506, 263507]
