--- a/config/machines/ci/catalog.yaml
+++ b/config/machines/ci/catalog.yaml
@@ -36,6 +36,9 @@ grids:
     vert_coord: ["2d", "2dm"]
     masked: 
       vars: ["2t"] # for testing purposes
+  tco79-nn:
+      path: $grids/IFS/tco79_grid.nc
+      regrid_method: 'nn'
   # FESOM
   test-pi-2d:
     path: $grids/pi_griddes_nodes_IFS.nc
