--- a/config/machines/lumi/catalog/NEMO/main.yaml
+++ b/config/machines/lumi/catalog/NEMO/main.yaml
@@ -9,8 +9,8 @@ sources:
     driver: yaml_file_cat
     args:
       path: '{{CATALOG_DIR}}/control-1990-nemo-dev.yaml'
-  spinup-nemo-ice:
+  spinup-nemo-fracice:
     description: 1990-1991 coupled spinup (2y) with fractional sea ice coupling
     driver: yaml_file_cat
     args:
-      path: '{{CATALOG_DIR}}/spinup-nemo-ice.yaml'
+      path: '{{CATALOG_DIR}}/spinup-nemo-fracice.yaml'
