--- a/config/fixes/IFS.yaml
+++ b/config/fixes/IFS.yaml
@@ -1,3 +1,101 @@
+family:
+    ifs-default:
+        data_model: ifs
+        deltat: 3600
+        jump: month
+        vars:
+            tprate:
+                source: tp
+                grib: true
+                decumulate: true
+                src_units: m
+                units: kg m**-2 s**-1
+            cprate:
+                source: cp
+                grib: true
+                decumulate: true
+                src_units: m
+                units: kg m**-2 s**-1
+            mlsprt:
+                source: lsp
+                grib: true
+                decumulate: true
+                src_units: m
+                units: kg m**-2 s**-1
+            erate:
+                source: e
+                grib: true
+                decumulate: true
+                src_units: m
+                units: kg m**-2 s**-1
+            esrate:
+                source: es
+                grib: true
+                decumulate: true
+                src_units: m
+                units: kg m**-2 s**-1
+            mrort:
+                source: ro
+                grib: true
+                decumulate: true
+                src_units: m
+                units: kg m**-2 s**-1
+            mtsfr:
+                source: sf
+                grib: true
+                decumulate: true
+                src_units: m
+                units: kg m**-2 s**-1
+            mslhfl:
+                source: slhf
+                grib: true
+                decumulate: true
+            msshfl:
+                source: sshf
+                grib: true
+                decumulate: true
+            msnsrf:
+                source: ssr
+                grib: true
+                decumulate: true
+            msdsrf:
+                source: ssrd
+                grib: true
+                decumulate: true    
+            msntrf:
+                source: str
+                grib: true
+                decumulate: true
+            msdtrf:
+                source: strd
+                grib: true
+                decumulate: true
+            mtnsrf:
+                source: tsr
+                grib: true
+                decumulate: true
+            mtntrf:
+                source: ttr
+                grib: true
+                decumulate: true         
+            var172045:  # if the variable has no short name we can use its paramId
+                source: smlt
+                grib: true
+                decumulate: true
+            iews:
+                source: ewss
+                grib: true
+                decumulate: true  
+            inss: 
+                source: nsss
+                grib: true
+                decumulate: true
+            surfror:  # a very recent version of eccodes is needed for this one
+                source: sro
+                grib: true
+                decumulate: true 
+
+
 models:
     IFS:
         default:
